feat: ci/cd 파이프라인 구축

--- a/.gitignore
+++ b/.gitignore
@@ -285,8 +285,8 @@ gradle-app.setting
 # Java heap dump
 *.hprof
 
-# Ignore application.properties
-application.yml
+# Ignore application.yml
+secret.yml
 
 # Ignore logs
 /logs
